--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -84,6 +84,7 @@ txtx-addon-network-svm-types = { workspace = true }
 uuid = "1.7.0"
 blake3 = "1.8.2"
 anyhow = "1.0.98"
+schemars = "0.9.0"
 
 [dev-dependencies]
 test-case = "^3.3.1"
