--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -34,6 +34,7 @@ blake3 = "1.8.2"
 once_cell = "1.19.0"
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+solana-rpc-client-api = { workspace = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
