--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -76,6 +76,7 @@ surfpool-types = { workspace = true }
 symlink = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = "0.7.13"
+txtx-addon-kit = { workspace = true }
 spl-token-2022 = "7.0.0"
 spl-token = "7.0.0"
 zstd = "0.13.2"
