--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -18,9 +18,6 @@ jobs:
     outputs:
       tag: ${{ steps.new_release_tag.outputs.TAG }}
     steps:
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y libudev-dev
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -191,6 +188,10 @@ jobs:
         run: |
           echo "SHORT_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}" >> $GITHUB_ENV
           echo "PRE_GYP_TARGET_NAME=${{ matrix.platform }}-${{ matrix.architecture }}-unknown" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        runs-on: ubuntu-latest
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
 
       - name: Build - Cargo
         run: 
