feat: migrate localflow to sqlite

--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -11,18 +11,19 @@ categories = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blake3 = "1.8.2"
+chrono = "0.4.26"
+convert_case = "0.8.0"
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
-uuid = { version = "1.6.1", features = ["serde", "v7"] }
 juniper = { version = "0.16.2", features = ["uuid"] }
 juniper_codegen = { version = "0.16.0" }
-# juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
-surfpool-types = { workspace = true }
-# surfpool-types = { version = "0.2.0", default-features = false }
-convert_case = "0.8.0"
-txtx-addon-kit = { workspace = true }
-# txtx-addon-kit = { version = "0.2.1" }
+serde = { version = "1.0.122" }
 solana-pubkey = { workspace = true }
 solana-sdk = { workspace = true }
+surfpool-db = { workspace = true }
+surfpool-types = { workspace = true }
+# surfpool-types = { version = "0.2.0", default-features = false }
+txtx-addon-kit = { workspace = true }
+# txtx-addon-kit = { version = "0.2.1" }
 txtx-addon-network-svm-types = { workspace = true }
-serde = { version = "1.0.122" }
-blake3 = "1.8.2"
+uuid = { version = "1.6.1", features = ["serde", "v7"] }
