--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["cryptography"]
 members = [
     "crates/cli",
     "crates/core", 
+    "crates/db",
     "crates/gql",
     "crates/mcp",
     "crates/subgraph",
@@ -32,6 +33,7 @@ hex = "0.4.3"
 hiro-system-kit = { version = "0.3.4" }
 ipc-channel = "0.19.0"
 surfpool-core = { path = "crates/core", default-features = false }
+surfpool-db = { path = "crates/db" }
 surfpool-gql = { path = "crates/gql", default-features = false }
 surfpool-mcp = { path = "crates/mcp", default-features = false }
 surfpool-subgraph = { path = "crates/subgraph", default-features = false }
