--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -20,10 +20,14 @@ juniper_codegen = { version = "0.16.0" }
 serde = { version = "1.0.122" }
 solana-pubkey = { workspace = true }
 solana-sdk = { workspace = true }
-surfpool-db = { workspace = true }
+surfpool-db = { workspace = true, features = ["sqlite"] }
 surfpool-types = { workspace = true }
 # surfpool-types = { version = "0.2.0", default-features = false }
 txtx-addon-kit = { workspace = true }
 # txtx-addon-kit = { version = "0.2.1" }
 txtx-addon-network-svm-types = { workspace = true }
 uuid = { version = "1.6.1", features = ["serde", "v7"] }
+
+[features]
+default = []
+postgres = ["surfpool-db/postgres"]
