--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -20,7 +20,7 @@ juniper_codegen = { version = "0.16.0" }
 serde = { version = "1.0.122" }
 solana-pubkey = { workspace = true }
 solana-sdk = { workspace = true }
-surfpool-db = { workspace = true, features = ["sqlite"] }
+surfpool-db = { workspace = true }
 surfpool-types = { workspace = true }
 # surfpool-types = { version = "0.2.0", default-features = false }
 txtx-addon-kit = { workspace = true }
@@ -30,4 +30,5 @@ uuid = { version = "1.6.1", features = ["serde", "v7"] }
 
 [features]
 default = []
+sqlite = ["surfpool-db/sqlite"]
 postgres = ["surfpool-db/postgres"]
