--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -10,7 +10,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-diesel = { version = "2.2.11", features = ["extras"] }
+diesel = { version = "2.2.11", default-features = false, features = ["chrono", "time", "serde_json", "uuid", "r2d2"] }
 diesel_derives = { version = "2.2.6"}
 diesel-dynamic-schema = { version = "0.2.3" }
 txtx-addon-kit = { workspace = true }
