fix: attempt to fix windows builds

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -49,7 +49,6 @@ solana-epoch-info = { workspace = true }
 solana-epoch-schedule = { workspace = true }
 solana-feature-set = { workspace = true }
 solana-hash = { workspace = true }
-solana-geyser-plugin-manager = { workspace = true }
 solana-keypair = { workspace = true }
 solana-message = { workspace = true }
 solana-native-token = { workspace = true }
@@ -86,6 +85,9 @@ txtx-addon-network-svm-types = { workspace = true }
 uuid = "1.7.0"
 blake3 = "1.8.2"
 anyhow = "1.0.98"
+
+[target.'cfg(not(windows))'.dependencies]
+solana-geyser-plugin-manager = { workspace = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
