--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -66,3 +66,4 @@ default = ["cli"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
+geyser-plugin = ["surfpool-core/geyser-plugin"]
