--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -62,8 +62,9 @@ txtx-supervisor-ui = { workspace = true, optional = true }
 url = "2.5.4"
 
 [features]
-default = ["cli"]
+default = ["cli", "sqlite"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
 geyser-plugin = ["surfpool-core/geyser-plugin"]
+sqlite = ["surfpool-gql/sqlite"]
