--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -15,6 +15,8 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 agave-geyser-plugin-interface = { workspace = true }
 solana-program = { workspace = true }
+solana-signature = { workspace = true }
+txtx-addon-kit = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
 txtx-addon-network-svm-types = { workspace = true }
 ipc-channel = { workspace = true }
