--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,12 @@ resolver = "2"
 [workspace.dependencies]
 agave-geyser-plugin-interface = "2.2.1"
 axum = { version = "0.8.0", features = ["macros"] }
+blake3 = "1.8.2"
 bincode = "1.3.3"
 borsh = "1.5.5"
 bs58 = "0.5.0"
+chrono = "0.4.26"
+convert_case = "0.8.0"
 crossbeam-channel = "0.5.15"
 hex = "0.4.3"
 hiro-system-kit = { version = "0.3.4" }
@@ -81,20 +84,20 @@ solana-transaction-status = { version = "2.2.2" }
 solana-version = "2.2.1"
 spl-associated-token-account =  "6.0.0"
 spl-token = "6.0.0"
-txtx-addon-kit = { version = "0.4.1", features = ["wasm"] }
-txtx-core = { version = "0.4.4" }
-txtx-addon-network-svm = { version = "0.1.25" }
-txtx-addon-network-svm-types = { version = "0.1.22" }
-txtx-gql = { version = "0.3.1" }
-txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
-txtx-cloud = "0.1.8"
+# txtx-addon-kit = { version = "0.4.1", features = ["wasm"] }
+# txtx-core = { version = "0.4.4" }
+# txtx-addon-network-svm = { version = "0.1.25" }
+# txtx-addon-network-svm-types = { version = "0.1.22" }
+# txtx-gql = { version = "0.3.1" }
+# txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
+# txtx-cloud = "0.1.8"
 tracing = "0.1"
 uuid = "1.15.1"
 tokio = "1.43.0"
 reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 
 
-[patch.crates-io]
+# [patch.crates-io]
 txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
 txtx-core = { path = "../txtx/crates/txtx-core" }
 txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
