--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -11,24 +11,26 @@ categories = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-blake3 = "1.8.2"
-chrono = "0.4.26"
-convert_case = "0.8.0"
+blake3 = { workspace = true }
+chrono = { workspace = true }
+convert_case = { workspace = true }
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 juniper = { version = "0.16.2", features = ["uuid"] }
 juniper_codegen = { version = "0.16.0" }
-serde = { version = "1.0.122" }
+serde = { workspace = true }
+serde_json = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-sdk = { workspace = true }
+solana-signature = { workspace = true }
 surfpool-db = { workspace = true }
 surfpool-types = { workspace = true }
 # surfpool-types = { version = "0.2.0", default-features = false }
 txtx-addon-kit = { workspace = true }
 # txtx-addon-kit = { version = "0.2.1" }
 txtx-addon-network-svm-types = { workspace = true }
-uuid = { version = "1.6.1", features = ["serde", "v7"] }
+uuid = { workspace = true }
 
 [features]
-default = ["sqlite"]
+default = ["sqlite", "postgres"]
 sqlite = ["surfpool-db/sqlite"]
 postgres = ["surfpool-db/postgres"]
