--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,13 +84,13 @@ solana-transaction-status = { version = "2.2.2" }
 solana-version = "2.2.1"
 spl-associated-token-account =  "6.0.0"
 spl-token = "6.0.0"
-# txtx-addon-kit = { version = "0.4.1", features = ["wasm"] }
-# txtx-core = { version = "0.4.4" }
-# txtx-addon-network-svm = { version = "0.1.25" }
-# txtx-addon-network-svm-types = { version = "0.1.22" }
-# txtx-gql = { version = "0.3.1" }
-# txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
-# txtx-cloud = "0.1.8"
+txtx-addon-kit = { version = "0.4.1", features = ["wasm"] }
+txtx-core = { version = "0.4.4" }
+txtx-addon-network-svm = { version = "0.1.25" }
+txtx-addon-network-svm-types = { version = "0.1.22" }
+txtx-gql = { version = "0.3.1" }
+txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
+txtx-cloud = "0.1.8"
 tracing = "0.1"
 uuid = "1.15.1"
 tokio = "1.43.0"
@@ -105,10 +105,10 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
 # txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
-txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
