--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,24 +84,24 @@ solana-transaction-status = { version = "2.2.2" }
 solana-version = "2.2.1"
 spl-associated-token-account =  "6.0.0"
 spl-token = "6.0.0"
-# txtx-addon-kit = { version = "0.4.1", features = ["wasm"] }
-# txtx-core = { version = "0.4.4" }
-# txtx-addon-network-svm = { version = "0.1.25" }
-# txtx-addon-network-svm-types = { version = "0.1.22" }
-# txtx-gql = { version = "0.3.1" }
-# txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
-# txtx-cloud = "0.1.8"
+txtx-addon-kit = { version = "0.4.2", features = ["wasm"] }
+txtx-core = { version = "0.4.5" }
+txtx-addon-network-svm = { version = "0.2.0" }
+txtx-addon-network-svm-types = { version = "0.2.0" }
+txtx-gql = { version = "0.3.1" }
+txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
+txtx-cloud = "0.1.8"
 tracing = "0.1"
 uuid = "1.15.1"
 tokio = "1.43.0"
 reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 
 
-# [patch.crates-io]
-txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
-txtx-core = { path = "../txtx/crates/txtx-core" }
-txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
-txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
-txtx-gql = { path = "../txtx/crates/txtx-gql" }
-txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
-txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
+[patch.crates-io]
+# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
+# txtx-core = { path = "../txtx/crates/txtx-core" }
+# txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
+# txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
+# txtx-gql = { path = "../txtx/crates/txtx-gql" }
+# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
+# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
