--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,3 +105,10 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
 # txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
+# txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+# txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
