fix: remove solana-program from deps

--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 agave-geyser-plugin-interface = { workspace = true }
-solana-program = { workspace = true }
+solana-clock = { workspace = true }
 solana-signature = { workspace = true }
 txtx-addon-kit = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
