--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -5,6 +5,7 @@ on:
       - main
       - ci
       - supervised
+      - feat/surfpool-studio
   workflow_dispatch:
 
 concurrency:
@@ -78,36 +79,6 @@ jobs:
       # pre-build for all OS
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Checkout Supervisor UI
-        uses: actions/checkout@v4
-        with:
-          repository: txtx/txtx-supervisor-ui
-          token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
-          path: txtx-supervisor-ui
-          
-      - name: Build .env file for Supervisor UI
-        uses: txtx/txtx/.github/actions/setup_supervisor_env@actions-beta-1
-        with:
-          txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
-          nhost_region: ${{ secrets.NHOST_REGION }}
-          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
-          working_directory: "txtx-supervisor-ui"
-
-      # install supervisor dependencies (windows)
-      - name: "Install dotenv-cli (windows)"
-        if: matrix.os == 'windows-latest'
-        run: |
-          cd txtx-supervisor-ui
-          npm i -g dotenv-cli
-          cd ..
-
-      - name: Build Supervisor UI
-        run: |
-          cd txtx-supervisor-ui
-          npm run i
-          npm run build
-          cd ..
 
       # set up rust for all envs
       - name: Install Rust toolchain
