--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -35,6 +35,7 @@ once_cell = "1.19.0"
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+anchor-lang-idl = { workspace = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
