--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -22,7 +22,7 @@ atty = "0.2.13"
 chrono = "0.4"
 clap = { version = "4.5.27", features = ["derive"], optional = true }
 clap_complete = "4.5.44"
-convert_case = "0.7.1"
+convert_case = { workspace = true }
 crossbeam = "0.8.4"
 crossterm = "0.28.1"
 ctrlc = { version = "3.4.5", optional = true }
