--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,10 +86,10 @@ solana-transaction-status = { version = "2.2.2" }
 solana-version = "2.2.1"
 spl-associated-token-account =  "6.0.0"
 spl-token = "6.0.0"
-txtx-addon-kit = { version = "0.4.2", features = ["wasm"] }
-txtx-core = { version = "0.4.5" }
-txtx-addon-network-svm = { version = "0.2.0" }
-txtx-addon-network-svm-types = { version = "0.2.0" }
+txtx-addon-kit = { version = "0.4.3", features = ["wasm"] }
+txtx-core = { version = "0.4.6" }
+txtx-addon-network-svm = { version = "0.2.1" }
+txtx-addon-network-svm-types = { version = "0.2.1" }
 txtx-gql = { version = "0.3.1" }
 txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
 txtx-cloud = "0.1.8"
@@ -100,6 +100,7 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 
 
 [patch.crates-io]
+## Local
 # txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
@@ -107,6 +108,8 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
 # txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
+
+## Git
 # txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
 # txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
 # txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
