feat: tweak surfpool-db cli arg

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -69,3 +69,4 @@ supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
 geyser-plugin = ["surfpool-core/geyser-plugin"]
 sqlite = ["surfpool-gql/sqlite"]
+postgres = ["surfpool-gql/postgres"]
