--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,8 +88,8 @@ spl-associated-token-account =  "6.0.0"
 spl-token = "6.0.0"
 txtx-addon-kit = { version = "0.4.4", features = ["wasm"] }
 txtx-core = { version = "0.4.7" }
-txtx-addon-network-svm = { version = "0.2.2" }
-txtx-addon-network-svm-types = { version = "0.2.2" }
+txtx-addon-network-svm = { version = "0.2.6" }
+txtx-addon-network-svm-types = { version = "0.2.4" }
 txtx-gql = { version = "0.3.2" }
 txtx-supervisor-ui = { version = "0.2.3", default-features = false, features = ["crates_build"]}
 txtx-cloud = "0.1.9"
@@ -101,13 +101,13 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 
 [patch.crates-io]
 ## Local
-txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
-txtx-core = { path = "../txtx/crates/txtx-core" }
-txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
-txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
-txtx-gql = { path = "../txtx/crates/txtx-gql" }
-txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
-txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
+# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
+# txtx-core = { path = "../txtx/crates/txtx-core" }
+# txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
+# txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
+# txtx-gql = { path = "../txtx/crates/txtx-gql" }
+# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
+# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 
 ## Git
 # txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
