--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,10 +110,10 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 # txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 
 ## Git
-# txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
-# txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
+txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
