--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -88,6 +88,7 @@ blake3 = "1.8.2"
 anyhow = "1.0.98"
 solana-geyser-plugin-manager = { workspace = true, optional = true }
 schemars = "1.0.4"
+serde_tuple = "1.1.2"
 
 [dev-dependencies]
 test-case = "^3.3.1"
