--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,7 +13,9 @@ categories = { workspace = true }
 path = "src/lib.rs"
 
 [dependencies]
+agave-feature-set = { workspace = true }
 agave-geyser-plugin-interface = { workspace = true }
+agave-precompiles = { workspace = true }
 base64 = "0.22.1"
 bincode = { workspace = true }
 borsh = { workspace = true }
@@ -46,9 +48,9 @@ solana-blake3-hasher = { workspace = true }
 solana-client = { workspace = true }
 solana-clock = { workspace = true }
 solana-commitment-config = { workspace = true }
+solana-compute-budget-interface = { workspace = true }
 solana-epoch-info = { workspace = true }
 solana-epoch-schedule = { workspace = true }
-solana-feature-set = { workspace = true }
 solana-hash = { workspace = true }
 solana-keypair = { workspace = true }
 solana-message = { workspace = true }
