--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,10 +90,10 @@ solana-version = "2.3.7"
 spl-associated-token-account =  "7.0.0"
 spl-token = "8.0.0"
 spl-token-2022 = "8.0.0"
-txtx-addon-kit = { version = "0.4.4", features = ["wasm"] }
-txtx-core = { version = "0.4.7" }
-txtx-addon-network-svm = { version = "0.2.7" }
-txtx-addon-network-svm-types = { version = "0.2.5" }
+txtx-addon-kit = { version = "0.4.5", features = ["wasm"] }
+txtx-core = { version = "0.4.8" }
+txtx-addon-network-svm = { version = "0.3.1" }
+txtx-addon-network-svm-types = { version = "0.3.0" }
 txtx-gql = { version = "0.3.2" }
 txtx-supervisor-ui = { version = "0.2.4", default-features = false, features = ["crates_build"]}
 txtx-cloud = "0.1.9"
@@ -105,13 +105,13 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 
 [patch.crates-io]
 ## Local
-# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
-# txtx-core = { path = "../txtx/crates/txtx-core" }
-# txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
-# txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
-# txtx-gql = { path = "../txtx/crates/txtx-gql" }
-# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
-# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
+txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
+txtx-core = { path = "../txtx/crates/txtx-core" }
+txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
+txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
+txtx-gql = { path = "../txtx/crates/txtx-gql" }
+txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
+txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 
 ## Git
 # txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
