--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -66,7 +66,7 @@ txtx-supervisor-ui = { workspace = true, optional = true }
 url = "2.5.4"
 
 [features]
-default = ["cli", "sqlite", "supervisor_ui"]
+default = ["cli", "sqlite"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
