--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,7 +13,10 @@ categories = { workspace = true }
 path = "src/lib.rs"
 
 [dependencies]
+agave-feature-set = { workspace = true }
 agave-geyser-plugin-interface = { workspace = true }
+agave-precompiles = { workspace = true }
+agave-reserved-account-keys = { workspace = true }
 base64 = "0.22.1"
 bincode = { workspace = true }
 borsh = { workspace = true }
@@ -46,9 +49,9 @@ solana-blake3-hasher = { workspace = true }
 solana-client = { workspace = true }
 solana-clock = { workspace = true }
 solana-commitment-config = { workspace = true }
+solana-compute-budget-interface = { workspace = true }
 solana-epoch-info = { workspace = true }
 solana-epoch-schedule = { workspace = true }
-solana-feature-set = { workspace = true }
 solana-hash = { workspace = true }
 solana-keypair = { workspace = true }
 solana-message = { workspace = true }
@@ -77,8 +80,8 @@ symlink = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = "0.7.13"
 txtx-addon-kit = { workspace = true }
-spl-token-2022 = "7.0.0"
-spl-token = "7.0.0"
+spl-token-2022 = { workspace = true }
+spl-token = { workspace = true }
 zstd = "0.13.2"
 libloading = "0.7.4"
 json5 = "0.4.1"
