--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -28,10 +28,13 @@ crossterm = "0.28.1"
 ctrlc = { version = "3.4.5", optional = true }
 dialoguer = "0.11.0"
 dirs = "6.0.0"
+fern = { version = "0.7.1", features = ["colored"] }
 hiro-system-kit = "0.3.1"
+indicatif = "0.18.0"
 juniper_actix = { version = "0.6.0", features = ["subscriptions"] }
 juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
 lazy_static = "1.5.0"
+log = "0.4.27"
 mime_guess = "2.0.4"
 mustache = "0.9.0"
 notify = { version = "8.0.0" }
