ci: temporarily disable geyser

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -185,7 +185,7 @@ jobs:
       - name: Build - Cargo (Unix)
         if: matrix.os != 'windows-latest'
         run: 
-          cargo build --release --locked --target ${{ matrix.target }} --features "supervisor_ui geyser-plugin"
+          cargo build --release --locked --target ${{ matrix.target }} --features "supervisor_ui"
 
       # Don't compress for Windows because winget can't yet unzip files
       - name: Compress cargo artifact (not windows)
