--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -72,7 +72,7 @@ solana-transaction-error = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
 spl-associated-token-account = { workspace = true }
-surfpool-subgraph = { workspace = true }
+surfpool-subgraph = { workspace = true, optional = true }
 surfpool-types = { workspace = true }
 # surfpool-types = { version = "0.9.3", default-features = false }
 # surfpool-subgraph = { version = "0.9.3", default-features = false }
@@ -89,7 +89,7 @@ txtx-addon-network-svm-types = { workspace = true }
 uuid = "1.7.0"
 blake3 = "1.8.2"
 anyhow = "1.0.98"
-solana-geyser-plugin-manager = { workspace = true, optional = true }
+# solana-geyser-plugin-manager = { version = "2.3.7", optional = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
@@ -97,4 +97,10 @@ test-log = "0.2.18"
 
 [features]
 ignore_tests_ci = []
-geyser-plugin = ["solana-geyser-plugin-manager"]
+geyser-plugin = [] # ["solana-geyser-plugin-manager"]
+subgraph = ["surfpool-subgraph"]
+
+# [patch.crates-io]
+# Force solana-sha256-hasher to version 2.3.0 to resolve dependency conflicts
+# solana-sha256-hasher = { git = "https://github.com/anza-xyz/solana-sdk.git", tag = "sha256-hasher@v2.3.0" }
+
