chore(cli): check version to emit deprecation notice

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,3 @@
 [alias]
-surfpool-install = "install --path crates/cli --locked --force --features supervisor_ui"
+surfpool-install = "install --path crates/cli --locked --force --features supervisor_ui --features version_check"
+surfpool-install-dev = "install --path crates/cli --locked --force --features supervisor_ui"
