--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -72,3 +72,4 @@ supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
 geyser-plugin = ["surfpool-core/geyser-plugin"]
 sqlite = ["surfpool-gql/sqlite"]
+version_check = []
