--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ categories = ["cryptography"]
 [workspace]
 members = [
     "crates/cli",
-    "crates/core", 
+    "crates/core",
     "crates/db",
     "crates/gql",
     "crates/mcp",
+    "crates/studio",
     "crates/subgraph",
     "crates/types",
-    "crates/studio"
 ]
 exclude = ["examples/hello-geyser"]
 default-members = ["crates/cli"]
@@ -30,8 +30,8 @@ agave-precompiles = "2.3.7"
 agave-reserved-account-keys = "2.3.7"
 anchor-lang-idl = "0.1.2"
 axum = { version = "0.8.0", features = ["macros"] }
-blake3 = "1.8.2"
 bincode = "1.3.3"
+blake3 = "1.8.2"
 borsh = "1.5.5"
 bs58 = "0.5.0"
 chrono = "0.4.26"
@@ -41,15 +41,9 @@ hex = "0.4.3"
 hiro-system-kit = { version = "0.3.4" }
 ipc-channel = "0.19.0"
 itertools = "0.14.0"
-surfpool-core = { path = "crates/core", default-features = false }
-surfpool-db = { path = "crates/db" }
-surfpool-gql = { path = "crates/gql" }
-surfpool-mcp = { path = "crates/mcp", default-features = false }
-surfpool-subgraph = { path = "crates/subgraph", default-features = false }
-surfpool-types = { path = "crates/types", default-features = false }
-surfpool-studio-ui = { path = "crates/studio", default-features = false }
 # litesvm = { path = "../litesvm/crates/litesvm", features = ["nodejs-internal"] }
 litesvm = { version = "0.7.0", features = ["nodejs-internal"] }
+reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 serde = "1.0.217"
 serde_bytes = "0.11.17"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
@@ -59,9 +53,9 @@ solana-account = "2.2.1"
 solana-account-decoder = "2.3.7"
 solana-account-decoder-client-types = { version = "2.3.7" }
 solana-address-lookup-table-interface = "2.2.2"
-solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
+solana-blake3-hasher = { version = "2.2.1", features = ["serde"] }
 solana-client = "2.3.7"
-solana-clock = { version = "2.2.2", features = ["serde"]}
+solana-clock = { version = "2.2.2", features = ["serde"] }
 solana-commitment-config = "2.2.1"
 solana-compute-budget-interface = "2.2.1"
 solana-epoch-info = { version = "2.2.1", features = ["serde"] }
@@ -69,39 +63,44 @@ solana-epoch-schedule = "2.2.1"
 solana-geyser-plugin-manager = "3.0.0"
 solana-hash = "2.3.0"
 solana-keypair = "2.2.3"
-solana-message = { version = "2.4.0", features = ["serde"]}
+solana-message = { version = "2.4.0", features = ["serde"] }
 solana-native-token = "3.0.0"
 solana-packet = "2.2.1"
 solana-program-runtime = "2.3.7"
-solana-pubkey = { version = "2.4.0", features = ["serde"]}
+solana-pubkey = { version = "2.4.0", features = ["serde"] }
 solana-rpc-client = "2.3.7"
 solana-rpc-client-api = "2.3.7"
 solana-runtime = "2.3.7"
 solana-sdk = "2.2.1"
 solana-sdk-ids = "2.2.1"
-solana-signature = { version = "2.3.0", features = ["serde"]}
+solana-signature = { version = "2.3.0", features = ["serde"] }
 solana-signer = "2.2.1"
 solana-system-interface = { version = "1.0.0", features = ["bincode"] }
-solana-transaction = { version = "2.2.3", features = ["serde", "bincode"]}
-solana-transaction-context = { version = "2.2.7", features = ["serde"]}
-solana-transaction-error = { version = "2.2.1", features = ["serde"]}
+solana-transaction = { version = "2.2.3", features = ["serde", "bincode"] }
+solana-transaction-context = { version = "2.2.7", features = ["serde"] }
+solana-transaction-error = { version = "2.2.1", features = ["serde"] }
 solana-transaction-status = { version = "2.3.7" }
 solana-version = "2.3.7"
 spl-associated-token-account =  "7.0.0"
 spl-token = "8.0.0"
 spl-token-2022 = "8.0.0"
-txtx-addon-kit = { version = "0.4.6", features = ["wasm"] }
-txtx-core = { version = "0.4.9" }
-txtx-addon-network-svm = { version = "0.3.3" }
-txtx-addon-network-svm-types = { version = "0.3.2" }
-txtx-gql = { version = "0.3.3" }
-txtx-supervisor-ui = { version = "0.2.6", default-features = false, features = ["crates_build"]}
-txtx-cloud = "0.1.10"
-tracing = "0.1"
-uuid = "1.15.1"
+surfpool-core = { path = "crates/core", default-features = false }
+surfpool-db = { path = "crates/db" }
+surfpool-gql = { path = "crates/gql" }
+surfpool-mcp = { path = "crates/mcp", default-features = false }
+surfpool-studio-ui = { path = "crates/studio", default-features = false }
+surfpool-subgraph = { path = "crates/subgraph", default-features = false }
+surfpool-types = { path = "crates/types", default-features = false }
 tokio = "1.43.0"
-reqwest = { version = "0.12.18", features = ["blocking", "json"] }
-
+tracing = "0.1"
+txtx-addon-kit = { version = "0.4.6", features = ["wasm"] }
+txtx-addon-network-svm = { version = "0.3.5" }
+txtx-addon-network-svm-types = { version = "0.3.4" }
+txtx-cloud = "0.1.10"
+txtx-core = { version = "0.4.9" }
+txtx-gql = { version = "0.3.4" }
+txtx-supervisor-ui = { version = "0.2.6", default-features = false, features = ["crates_build"] }
+uuid = "1.15.1"
 
 [patch.crates-io]
 ## Local
@@ -114,10 +113,10 @@ reqwest = { version = "0.12.18", features = ["blocking", "json"] }
 # txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 
 ## Git
-txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
-txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/subgraph-token-accounts" }
+# txtx-addon-kit = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-core = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-addon-network-svm = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-addon-network-svm-types = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-gql = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-supervisor-ui = { git = "https://github.com/txtx/txtx.git", branch = "main" }
+# txtx-cloud = { git = "https://github.com/txtx/txtx.git", branch = "main" }
