fix: geyser-plugin syntax

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -70,7 +70,7 @@ default = ["cli", "sqlite", "subgraph"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 explorer = []
-geyser-plugin = ["surfpool-core/geyser-plugin"]
+geyser_plugin = ["surfpool-core/geyser_plugin"]
 sqlite = ["surfpool-gql/sqlite"]
 postgres = ["surfpool-gql/postgres"]
 version_check = []
