--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -38,6 +38,7 @@ log = "0.4.27"
 mime_guess = "2.0.4"
 mustache = "0.9.0"
 notify = { version = "8.0.0" }
+fork = "0.2.0"
 ratatui = "0.29.0"
 rust-embed = "8.2.0"
 serde = "1.0.217"
