refactor: use more granular solana crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,13 +66,21 @@ solana-hash = "2.3.0"
 solana-keypair = "^2.2"
 solana-message = { version = "2.3.0", features = ["serde"] }
 solana-native-token = "2.2.2"
+solana-instruction = "2.2.1"
 solana-packet = "2.2.1"
+solana-inflation = "2.2.1"
+solana-sysvar = "2.2.1"
+solana-genesis-config = "2.2.1"
 solana-program-runtime = "2.3.8"
+solana-program-pack = "2.2.1"
+solana-feature-gate-interface = "2.2.1"
+solana-program-option = "2.2.1"
+solana-slot-hashes = "2.2.1"
+solana-loader-v3-interface = "5.0.0"
 solana-pubkey = { version = "2.3.0", features = ["serde"] }
 solana-rpc-client = "2.3.8"
 solana-rpc-client-api = "2.3.8"
 solana-runtime = "2.3.8"
-solana-sdk = "2.3.1"
 solana-sdk-ids = "2.2.1"
 solana-signature = { version = "2.3.0", features = ["serde"] }
 solana-signer = "2.2.1"
